:lipstick: Fix blog articles whitespace
When having different heights fix the issue of distributing the space

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -405,12 +405,15 @@
 }
 
 .post {
+	display: flex;
 	padding: 0;
 	transition: all .3s ease-out;
 	border-radius: 2px;
 	margin: 2.75em 0;
 	overflow: hidden;
 	box-shadow: 0 1px 4px rgba(0, 0, 0, .15);
+	flex-direction: column;
+	justify-content: space-between;
 
 	header {
 		width: 100%;
